# chessbox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml  test_workflow.yml
ChessBasics/Benchmarking/: Benchmark.cpp  Benchmark.hpp  main.cpp
ChessBasics/ChessBasics.xcodeproj/: project.pbxproj
ChessBasics/ChessBasics.xcodeproj/project.xcworkspace/xcuserdata/ildi.xcuserdatad/: UserInterfaceState.xcuserstate
ChessBasics/ChessBasics.xcodeproj/xcshareddata/xcschemes/: Benchmarking.xcscheme  ChessBasics.xcscheme  Loadtesting.xcscheme  Testing.xcscheme
ChessBasics/ChessBasics.xcodeproj/xcuserdata/ildi.xcuserdatad/xcschemes/: xcschememanagement.plist
ChessBasics/Loadtesting/: Movedecoder.cpp  Movedecoder.hpp  Movetest.cpp  Movetest.hpp
ChessBasics/Testing/: ControlTests.cpp  DirectionTests.cpp  FENTests.cpp  GeometryTests.cpp  MoveTests.cpp  MovecheckTests.cpp  MovegenTests.cpp  PieceTests.cpp  PositionTests.cpp  SquareTests.cpp  SquaresTests.cpp  StepsTests.cpp  UnitTesting.hpp  main.cpp
ChessBasics/lib/: ChessBasics.hpp  Color.hpp  Control.cpp  Control.hpp  Direction.hpp  FEN.cpp  FEN.hpp  Geometry.cpp  Geometry.hpp  Move.cpp  Move.hpp  Movecheck.cpp  Movecheck.hpp  Movegen.cpp  Movegen.hpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp  Square.cpp  Square.hpp  Squares.cpp  Squares.hpp  Step.cpp  Step.hpp  bitscan.hpp  deps.h
ChessBasics/lib/Generators/: AdjacentsGenerator.hpp  DirectionsGenerator.hpp  FileGenerator.hpp  KnightMoveGenerator.hpp  LinesGenerator.hpp  PawnCaptureGenerator.hpp  PawnMoveGenerator.hpp  RangesGenerator.hpp  RankGenerator.hpp  SquareGenerator.hpp
lib/: BB.cpp  BB.hpp  ChessBasics.hpp  Color.cpp  Color.hpp  Control.cpp  Control.hpp  Direction.cpp  Direction.hpp  Error.cpp  Error.hpp  FEN.cpp  FEN.hpp  Geometry.cpp  Geometry.hpp  Move.cpp  Move.hpp  Movecheck.cpp  Movecheck.hpp  Movegen.cpp  Movegen.hpp  ParseError.cpp  ParseError.hpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp  Result.hpp  SemanticError.cpp  SemanticError.hpp  Square.cpp  Square.hpp  Squares.cpp  Squares.hpp  Step.cpp  Step.hpp  bitscan.hpp  chessbox.hpp
lib/Formats/: AlgebraicNotation.cpp  AlgebraicNotation.hpp  FEN.cpp  LAN.cpp  LAN.hpp  PAN.cpp  PAN.hpp  SAN.cpp  SAN.hpp
lib/Formats/Grammar/: GrammarDecl.hpp  GrammarDef.hpp  LANGrammar.hpp  PANGrammar.hpp  SANGrammar.hpp
lib/Generators/: AdjacentsGenerator.hpp  DirectionsGenerator.hpp  FileGenerator.hpp  KnightMoveGenerator.hpp  LineGenerator.hpp  LinesGenerator.hpp  PawnCaptureGenerator.hpp  PawnMoveGenerator.hpp  RangeGenerator.hpp  RangesGenerator.hpp  RankGenerator.hpp  SquareGenerator.hpp
tests/load_tests/: Gentest.cpp  Gentest.hpp  Movedecoder.hpp  Movetest.cpp  main.cpp
tests/perf_tests/: Benchmark.cpp  Benchmark.hpp  main.cpp
tests/unit_tests/: BBTests.cpp  ColorTests.cpp  ControlTests.cpp  DirectionTests.cpp  FENTests.cpp  GeometryTests.cpp  LANTests.cpp  MoveTests.cpp  MovecheckTests.cpp  MovegenTests.cpp  PANTests.cpp  PieceTests.cpp  PositionTests.cpp  SANTests.cpp  SquareTests.cpp  SquaresTests.cpp  StepsTests.cpp  UnitTesting.cpp  UnitTesting.hpp  main.cpp
